--- a/public/user/index.html
+++ b/public/user/index.html
@@ -109,7 +109,7 @@ integrity=
 											</a>
 											<!-- <button type="submit" class="btn btn-lg btn-primary">Sign up</button> -->
 										</div>
-										<a style="text-decoration: none; color:#ff00cc" href="../login">Have
+										<a style="text-decoration: none; color:#ff00cc" href="../user/login">Have
 											account? Sign in</a>
 									</form>
 								</div>
