--- a/public/user/index.html
+++ b/public/user/index.html
@@ -97,8 +97,8 @@ integrity=
 										</div>
 										<div class="mb-3">
 											<label class="form-label">Referer Code (Optional)</label>
-											<input id="referral" class="form-control form-control-lg" required
-												type="email" name="referal" placeholder="Enter referal code" />
+											<input id="refcode" class="form-control form-control-lg" required
+												type="email" name="referal" placeholder="Enter referrer code" />
 										</div>
 										<div class="text-center mt-3">
 											<a href="">
