--- a/public/user/depositebnb/index.html
+++ b/public/user/depositebnb/index.html
@@ -339,12 +339,12 @@
 											<h5 class="card-title mb-0 m-3">
 												<p style="text-align: center; color: #e8e8e8;">Please tranfer exact amount to the wallet address below, then come back and confirm your tranfer. </p>
 											</h5>
-											<input type="input" readonly id="copyText2" style=" width: 100%; font-weight: 500; appearance: none; display:flex; font-size: 14px;" value="bnb1m80pe2f6l3nk05y6kwsz42gcx2q3uw6mpq70jn" />
+											<input type="input" readonly id="copyText2" style=" width: 100%; font-weight: 500; appearance: none; display:flex; font-size: 14px;" value="0x53E3BBc28353c3Bb98A8240E5773a3dC4D1aEb23" />
 											
 											<button id="trc20" style="text-align: center;" class="btn btn-primary p-1 m-2" >copy address</button>
 											<small id="small"><p id="alert" class="badge bg-dark" style="text-align: center;"></p></small> 
 											<h5 class="card-title mb-0 m-3" style="display: flex; text-align: center;">Scan (Network: BEP20)</h5>
-											<img src="../assets/img/avatars/bnb.jpeg" width="250"style="position:relative;box-shadow:0px 0px 0px rgba(0, 0, 0, 0.562); border-radius: .2rem; margin:5px;padding:0px;"/>
+											<img src="../assets/img/avatars/bnb.PNG" width="250"style="position:relative;box-shadow:0px 0px 0px rgba(0, 0, 0, 0.562); border-radius: .2rem; margin:5px;padding:0px;"/>
 										
 									</div>
 									<div class="card-body">
