--- a/public/user/depositeeth/index.html
+++ b/public/user/depositeeth/index.html
@@ -313,7 +313,7 @@
 											<button  onclick="CopyText()" style="text-align: center;" class="btn btn-primary p-1 m-2" >copy address</button>
 											<small id="small"><p id="alert" class="badge bg-dark" style="text-align: center;"></p></small> 
 											 <h5 class="card-title mb-0 m-3" style="display: flex; text-align: center;">Scan (Network: ERC20)</h5>
-											<img src="img/avatars/eth.jpeg" width="250" style="position:relative;box-shadow:0px 0px 0px rgba(0, 0, 0, 0.562); border-radius: .2rem; margin:5px;padding:0px;"/>
+											<img src="img/avatars/eth.PNG" width="250" style="position:relative;box-shadow:0px 0px 0px rgba(0, 0, 0, 0.562); border-radius: .2rem; margin:5px;padding:0px;"/>
 											
 									</div>
 									<div class="card-body">
