--- a/public/user/depositebtc/index.html
+++ b/public/user/depositebtc/index.html
@@ -338,7 +338,7 @@
 											<small id="small"><p id="alert" class="badge bg-dark" style="text-align: center;"></p></small> 
 											
 											<h5 class="card-title mb-4 m-3" style="display: flex; text-align: center;">Scan (Network: Bitcon)</h5>
-											<img src="../assets/img/avatars/btc.jpeg" width="250" style="position:relative;box-shadow:0px 0px 0px rgba(0, 0, 0, 0.562); border-radius: .2rem; margin: 5px;padding:0px;"/>
+											<img src="../assets/img/avatars/btc.PNG" width="250" style="position:relative;box-shadow:0px 0px 0px rgba(0, 0, 0, 0.562); border-radius: .2rem; margin: 5px;padding:0px;"/>
 											
 									</div>
 									<div class="card-body">
