--- a/public/user/depositeusdt/index.html
+++ b/public/user/depositeusdt/index.html
@@ -96,7 +96,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="dashboard.html">
-					<img src="../assets/img/uploads/apex-white.jpg" width="100%" height="60" alt="" srcset="">
+					<img src="../assets/img/uploads/apex-white.jpg" width="100%" height="70%" alt="" srcset="">
 
 				</a>
 
