--- a/public/user/admin/dashboard/index.html
+++ b/public/user/admin/dashboard/index.html
@@ -100,7 +100,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="dashboard.html">
-					<img src="../assets/img/uploads/apex-white.jpg" width="100%" height="60" alt="" srcset="">
+					<img src="../assets/img/uploads/apex-white.jpg" width="100%" height="70%" alt="" srcset="">
 
 				</a>
 
@@ -131,7 +131,7 @@
 					</li>
 
 					<li class="sidebar-item active">
-						<a class="sidebar-link" href="index.html">
+						<a class="sidebar-link" href="./">
 							<i class="align-middle" data-feather="sliders"></i> <span
 								class="align-middle">Dashboard</span>
 						</a>
@@ -144,40 +144,36 @@
 						</a>
 					</li>
 
-					<!-- <li class="sidebar-item ">
-						<a class="sidebar-link" href="../withdraw">
-							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
-								class="align-middle">Withdraw</span>
-						</a>
-					</li> -->
-
-					<!-- <li class="sidebar-item ">
-						<a class="sidebar-link" href="../wallets">
-							<i class="align-middle" data-feather="external-link"></i> <span class="align-middle">Connect
-								Wallet</span>
-						</a>
-					</li>-->
 					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../topup">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
+								class="align-middle">Top Up Client Account</span>
+						</a>
+					</li>
+
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../profit/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Top up Client Profit</span>
+						</a>
+					</li>
+					<!-- <li class="sidebar-item ">
 						<a class="sidebar-link" href="../investment">
 							<i class="align-middle" data-feather="feather"></i> <span class="align-middle">Investment
 								Plans</span>
 						</a>
+					</li> -->
+
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../block/">
+							<i class="align-middle" data-feather="info"></i> <span class="align-middle">Block Client Account</span>
+						</a>
 					</li>
 
-					<!-- <li class="sidebar-item ">
-						<a class="sidebar-link" href="../history">
-							<i class="align-middle" data-feather="info"></i> <span class="align-middle">History</span>
+					<li class="sidebar-item">
+						<a class="sidebar-link" href="../delate/">
+							<i class="align-middle" data-feather="trash-2"></i> <span class="align-middle">Delete Client Account</span>
 						</a>
-					</li> -->
-
-
-
-
-					<!-- <li class="sidebar-item">
-						<a class="sidebar-link" href="../guides">
-							<i class="align-middle" data-feather="book"></i> <span class="align-middle">Guides</span>
-						</a>
-					</li> -->
+					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="../login" onclick="logOut()">
