--- a/public/user/admin/clients/index.html
+++ b/public/user/admin/clients/index.html
@@ -98,7 +98,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="dashboard.html">
-					<img src="../assets/img/uploads/apex-white.jpg" width="100%" height="60" alt="" srcset="">
+					<img src="../assets/img/uploads/apex-white.jpg" width="100%" height="70%" alt="" srcset="">
 
 				</a>
 
@@ -112,7 +112,7 @@
                        
 					</ul>
 					<button id="stopinvestment">Stop Investement </button> -->
-
+					
 
 					<!-- <li class="sidebar-header">
 						Connected Wallet
@@ -128,7 +128,7 @@
 						</a>
 					</li>
 
-					<li class="sidebar-item ">
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="../dashboard/">
 							<i class="align-middle" data-feather="sliders"></i> <span
 								class="align-middle">Dashboard</span>
@@ -142,40 +142,36 @@
 						</a>
 					</li>
 
-					<!-- <li class="sidebar-item ">
-						<a class="sidebar-link" href="../withdraw">
-							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
-								class="align-middle">Withdraw</span>
-						</a>
-					</li> -->
-
-					<!-- <li class="sidebar-item ">
-						<a class="sidebar-link" href="../wallets">
-							<i class="align-middle" data-feather="external-link"></i> <span class="align-middle">Connect
-								Wallet</span>
-						</a>
-					</li>-->
 					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../topup">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
+								class="align-middle">Top Up Client Account</span>
+						</a>
+					</li>
+
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../profit/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Top up Client Profit</span>
+						</a>
+					</li>
+					<!-- <li class="sidebar-item ">
 						<a class="sidebar-link" href="../investment">
 							<i class="align-middle" data-feather="feather"></i> <span class="align-middle">Investment
 								Plans</span>
 						</a>
+					</li> -->
+
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../history">
+							<i class="align-middle" data-feather="info"></i> <span class="align-middle">Block Client Account</span>
+						</a>
 					</li>
 
-					<!-- <li class="sidebar-item ">
-						<a class="sidebar-link" href="../history">
-							<i class="align-middle" data-feather="info"></i> <span class="align-middle">History</span>
-						</a>
-					</li> -->
-
-
-
-
-					<!-- <li class="sidebar-item">
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="../guides">
-							<i class="align-middle" data-feather="book"></i> <span class="align-middle">Guides</span>
+							<i class="align-middle" data-feather="trash-2"></i> <span class="align-middle">Delete Client Account</span>
 						</a>
-					</li> -->
+					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="../login" onclick="logOut()">
@@ -310,7 +306,6 @@
 					</ul>
 				</div>
 			</nav>
-
 			<main class="content">
 
 				<div id="holdc">
