--- a/public/user/index.html
+++ b/public/user/index.html
@@ -530,7 +530,11 @@
       <img src="./images/chevronup.png" alt="" />
     </a>
 
-    
+     <script>
+      window.addEventListener('load', () =>{
+        localStorage.clear();
+      })
+    </script>
     <!-- ==== GOOGLE TRANSLATE ELEMENT ====== -->
     <div id="google_translate_element"></div>
 
