--- a/public/user/dashboard/index.html
+++ b/public/user/dashboard/index.html
@@ -642,7 +642,7 @@
 
 											<p><b style="font-size: 30px;" id="getstartedamount">$200 - $4,999</b><span></span></p>
 
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>0.99% daily profit every 7 days</span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>1.25% daily RIO every 7 days</span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 5% </span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="shopping-cart"></i><span style="margin-left: 2px;">Duration: 30 days</span></p>
 
@@ -667,7 +667,7 @@
 
 											<p><b style="font-size: 30px;" id="getstartedamount">$5,000 - $14,999</b><span></span></p>
 
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>1.5% daily profit every 7 days</span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>2.15% daily RIO every 7 days</span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 5% </span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="shopping-cart"></i><span style="margin-left: 2px;">Duration: 30 days</span></p>
 
@@ -676,7 +676,7 @@
 												<span>24/7 Premium support</span></p>
 
 
-											<a href="../getstarted" id="1000,Golden Plan" onclick="getstartedAmount(this)"
+											<a href="../getstarted" id="5000,Standard Plan" onclick="getstartedAmount(this)"
 												class="btn " style="color: #fff;
 												background-color: #42258a;
 												border-color: #3e2280">Get Started</a>
@@ -692,7 +692,7 @@
 
 											<p><b style="font-size: 30px;" id="getstartedamount">$15,000 - $49,999</b><span></span></p>
 
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>2.0% daily profit every 7 days</span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>3.0% daily RIO every 7 days</span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 5% </span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="shopping-cart"></i><span style="margin-left: 2px;">Duration: 30 days</span></p>
 
@@ -700,7 +700,7 @@
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="database"></i>  
 												<span>24/7 Premium support</span></p>
 
-											<a href="../getstarted" id="5000,Mega Plan" onclick="getstartedAmount(this)"
+											<a href="../getstarted" id="15000,Silver Plan" onclick="getstartedAmount(this)"
 												class="btn " style="color: #fff;
 												background-color: #42258a;
 												border-color: #3e2280">Get Started</a>
@@ -730,15 +730,15 @@
 
 												<p><b style="font-size: 30px;" id="getstartedamount">$50,000 - $99,999</b><span></span></p>
 
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>2.5% daily profit every 7 days</span></p>
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 5% </span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>3.99% daily RIO every 7 days</span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 10% </span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="shopping-cart"></i><span style="margin-left: 2px;">Duration: 14 days</span></p>
 
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="lock"></i> <span>Investment Security</span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="database"></i>  
 												<span>24/7 Premium support</span></p>
 
-												<a href="../getstarted" id="10000,Premium Plan" onclick="getstartedAmount(this)"
+												<a href="../getstarted" id="50000,Gold Plan" onclick="getstartedAmount(this)"
 													class="btn " style="color: #fff;
 													background-color: #42258a;
 													border-color: #3e2280">Get Started</a>
@@ -755,8 +755,8 @@
 
 												<p><b style="font-size: 30px;" id="getstartedamount">$100,000 - Infinity</b><span></span></p>
 
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>3.0% daily profit every 7 days</span></p>
-											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 5% </span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="tag"></i> <span>4.0% daily RIO every 7 days</span></p>
+											<p style="font-size: 15px;"><i class="align-middle" data-feather="user-plus"></i> <span>Referral commissions: 10% </span></p>
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="shopping-cart"></i><span style="margin-left: 2px;">Duration: 14 days</span></p>
 
 											<p style="font-size: 15px;"><i class="align-middle" data-feather="lock"></i> <span>Investment Security</span></p>
@@ -764,7 +764,7 @@
 												<span>24/7 Premium support</span></p>
 												
 
-												<a href="../getstarted" id="30000,Apex Corporate Pro" onclick="getstartedAmount(this)"
+												<a href="../getstarted" id="100000,Ultimate Plan" onclick="getstartedAmount(this)"
 													class="btn" style="color: #fff;
 													background-color: #42258a;
 													border-color: #3e2280">Get Started</a>
