--- a/public/user/index.html
+++ b/public/user/index.html
@@ -127,6 +127,11 @@ integrity=
             cursor: pointer;
         }
     </style>
+	     <script>
+			window.addEventListener('load', () =>{
+			  localStorage.clear();
+			})
+		  </script>
 	<script>
 
 		const eye = document.getElementById("eye")
