--- a/public/user/investment/index.html
+++ b/public/user/investment/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,15 +11,11 @@
 
 	<link rel="preconnect" href="../external.html?link=https://fonts.gstatic.com/">
 	<link rel="shortcut icon" href="../img/icons/icon-48x48.png" />
-
 	<link rel="canonical" href="../dashboard/" />
-
 	<title>Apex Corporate | Investment plans</title>
-
 	<link href="../assets/css/app.css" rel="stylesheet">
 	<link href="../assets/css/new.css" rel="stylesheet">
-	<link href="../external.html?link=https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&amp;display=swap"
-		rel="stylesheet">
+	<link href="../external.html?link=https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -119,7 +112,7 @@
 
 					</ul> -->
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="https://apexcorporategroup.com">
+						<a class="sidebar-link" href="https://apexcorporatefinanceltd.com">
 							<i class="align-middle" data-feather="home"></i> <span class="align-middle">Homepage</span>
 						</a>
 					</li>
@@ -289,7 +282,7 @@
 							</a>
 							<div class="dropdown-menu dropdown-menu-end">
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="https://apexcorporategroup.com"><i
+								<a class="dropdown-item" href="https://apexcorporatefinanceltd.com"><i
 										class="align-middle me-1" data-feather="home"></i> Go to Hompage</a>
 
 								<div class="dropdown-divider"></div>
