--- a/public/user/getstarted/index.html
+++ b/public/user/getstarted/index.html
@@ -120,7 +120,7 @@
 
 					</ul> -->
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="https://apexcorporategroup.com">
+						<a class="sidebar-link" href="https://apexcorporatefinanceltd.com">
 							<i class="align-middle" data-feather="home"></i> <span class="align-middle">Homepage</span>
 						</a>
 					</li>
@@ -290,7 +290,7 @@
 							</a>
 							<div class="dropdown-menu dropdown-menu-end">
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="https://apexcorporategroup.com"><i
+								<a class="dropdown-item" href="https://apexcorporatefinanceltd.com"><i
 										class="align-middle me-1" data-feather="home"></i> Go to Hompage</a>
 
 								<div class="dropdown-divider"></div>
