--- a/public/user/login/index.html
+++ b/public/user/login/index.html
@@ -51,7 +51,7 @@
             <div class="row " id="firstpu2">
                 <div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
                     <div class="d-table-cell align-middle">
-                        <img src="../assets/img/uploads/apex-white.jpg" style="width: 100%; height: 300px;" alt="">
+                        <img src="../assets/img/uploads/apex-white.jpg" style="width: 100%; height: 260px;" alt="">
 
                         <div class="text-center mt-4">
 							<h1 class="h2">Welcome Back</h1>
@@ -129,6 +129,11 @@
             cursor: pointer;
         }
     </style>
+         <script>
+            window.addEventListener('load', () =>{
+              localStorage.clear();
+            })
+          </script>
     <script>
 
         const eye = document.getElementById("eye")
