--- a/public/user/admin/topup/index.html
+++ b/public/user/admin/topup/index.html
@@ -22,7 +22,7 @@
 	<title>deposite| Apex Corporate</title>
 
 	<link href="../assets/css/app.css" rel="stylesheet">
-	<link href="../assets/new.css" rel="stylesheet">
+	<link href="../assets/css/new.css" rel="stylesheet">
 	<link href="../external.html?link=https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&amp;display=swap"
 		rel="stylesheet">
 </head>
@@ -124,7 +124,7 @@
 
 					</ul> -->
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="https://apexcorporategroup.com">
+						<a class="sidebar-link" href="https://apexcorporatefinanceltd.com">
 							<i class="align-middle" data-feather="home"></i> <span class="align-middle">Homepage</span>
 						</a>
 					</li>
@@ -289,7 +289,7 @@
 							</a>
 							<div class="dropdown-menu dropdown-menu-end">
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="https://apexcorporategroup.com"><i
+								<a class="dropdown-item" href="https://apexcorporatefinanceltd.com"><i
 										class="align-middle me-1" data-feather="home"></i> Go to Hompage</a>
 
 								<div class="dropdown-divider"></div>
@@ -326,6 +326,11 @@
 
 									<form>
 										<h4 style="color: white; text-align: center;">Please copy the client's email from the clients page. <br/> Click the Top-up button to top-up client or the debit button to withdraw from client account</h4>
+										<h5 class="card-title mb-0">Transaction ID <span class="text-warning"> (Copy it from the email sent to admin)</span> </h5>
+										<input id="transactionid" type="text" style="display:flex; color: #e8e8e8;
+											box-shadow:0px 0px 1px rgba(0, 0, 0, 0.24);padding:5px;background-color:rgba(0, 0, 0, 0.11);border:none;
+											width:100%;border-radius:.2rem;flex: 1 1 0%;" required placeholder="Transaction ID" />
+										
 										<h5 class="card-title mb-0">Client Email</h5>
 										<input id="email" type="text" style="display:flex; color: #e8e8e8;
 											box-shadow:0px 0px 1px rgba(0, 0, 0, 0.24);padding:5px;background-color:rgba(0, 0, 0, 0.11);border:none;
@@ -441,6 +446,10 @@
 	</style>
 
 	<script src="../assets/js/app.js"></script>
+	
+	<script src="../assets/js/update.js"></script>
+
+	
 	<script src="../assets/js/deposite.js"></script>
 	<script src="../assets/js/notification.js"></script>
 	<script src="../assets/js/navbar.js"></script>
