--- a/public/user/dashboard/index.html
+++ b/public/user/dashboard/index.html
@@ -380,7 +380,7 @@
 											<div id="deposite" class="card-body">
 												<div class="row">
 													<div class="col mt-0">
-														<h5 class="card-title">Total Amount deposited</h5>
+														<h5 class="card-title">Total Amount Deposited</h5>
 													</div>
 
 													<div class="col-auto">
