--- a/public/user/depositeusdt/index.html
+++ b/public/user/depositeusdt/index.html
@@ -363,8 +363,12 @@
 
 
 									<div class="card-body">
+									  <div style="margin-bottom: 1rem;">
 										<h5 class="" style="color: #e8e8e8;">Upload screenshot of deposite</h5>
-										<input type="file" id="screenshot" />
+										<input type="file" id="screenshot" /> 
+										<button id="sendbtn" class="btn btn-secondary mt-1"> Save & Upload</button>
+										
+									  </div>
 										
 										<input type="button" id="depositebtn" value="Confirm Tranfer" class="btn btn-primary m-1"
 											style=" text-align:center; width:100%;border-radius:.2rem;flex: 1 1 0%;" />
@@ -428,6 +432,7 @@
 	<script src="../assets/js/navbar.js"></script>
 	<script src="../assets/js/depositeApi.js"></script>
 	<script src="../assets/js/amount.js"></script>
+	<script src="../assets/js/newpictures.js"></script>
 
 	<script src="../assets/js/clipboard.js"></script>
 		<script src="../assets/js/newcopy.js"></script>
