--- a/public/user/admin/dashboard/index.html
+++ b/public/user/admin/dashboard/index.html
@@ -150,7 +150,23 @@
 								class="align-middle">Top Up Client Account</span>
 						</a>
 					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../withdrawal/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Set Withdrawable Balance</span>
+						</a>
+					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../stopinvestment/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Stop Client Investement</span>
+						</a>
+					</li>
 
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../receipts">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
+								class="align-middle">See Receipts </span>
+						</a>
+					</li>
 					<li class="sidebar-item ">
 						<a class="sidebar-link" href="../profit/">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Top up Client Profit</span>
