--- a/public/user/admin/receipts/index.html
+++ b/public/user/admin/receipts/index.html
@@ -135,7 +135,7 @@
 						</a>
 					</li>
 
-					<li class="sidebar-item active">
+					<li class="sidebar-item ">
 						<a class="sidebar-link" href="../clients">
 							<i class="align-middle" data-feather="arrow-down-circle"></i> <span
 								class="align-middle">View All Clients</span>
@@ -149,12 +149,17 @@
 						</a>
 					</li>
 					<li class="sidebar-item ">
-						<a class="sidebar-link" href="../withdrawal/">
-							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Set Withdrawable Balance</span>
+						<a class="sidebar-link" href="../stopinvestment/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Stop Client Investement</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../withdrawal/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Set Withdrawable Balance</span>
+						</a>
+					</li>
+					<li class="sidebar-item active">
 						<a class="sidebar-link" href="../receipts">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
 								class="align-middle">See Receipts </span>
@@ -413,7 +418,7 @@
 
 	<script src="../assets/jquery/jquery.min.js"></script>
 	<script src="../assets/js/app.js"></script>
-	<script src="../assets/js/clients.js"></script>
+	<script src="../assets/js/receipts.js"></script>
 	<script src="../assets/js/befordeposit.js"></script>
 	<!-- <script src="../assets/js/navbar.js"></script>
 	<script src="../assets/js/withdrawAPI.js"></script> -->
