--- a/public/user/admin/delate/index.html
+++ b/public/user/admin/delate/index.html
@@ -149,12 +149,24 @@
 								class="align-middle">Top Up Client Account</span>
 						</a>
 					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../receipts">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
+								class="align-middle">See Receipts </span>
+						</a>
+					</li>
 
 					<li class="sidebar-item ">
 						<a class="sidebar-link" href="../profit/">
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Top up Client Profit</span>
 						</a>
 					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../stopinvestment/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Stop Client Investement</span>
+						</a>
+					</li>
+
 					<!-- <li class="sidebar-item ">
 						<a class="sidebar-link" href="../investment">
 							<i class="align-middle" data-feather="feather"></i> <span class="align-middle">Investment
