--- a/public/user/admin/investment/index.html
+++ b/public/user/admin/investment/index.html
@@ -145,6 +145,18 @@
 							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Top
 								Up Client Account</span>
 						</a>
+					
+					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../withdrawal/">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span class="align-middle">Set Withdrawable Balance</span>
+						</a>
+					</li>
+					<li class="sidebar-item ">
+						<a class="sidebar-link" href="../receipts">
+							<i class="align-middle" data-feather="arrow-up-circle"></i> <span
+								class="align-middle">See Receipts </span>
+						</a>
 					</li>
 
 					<li class="sidebar-item ">
